Fixes text-overflow issues, changes font-size for footer

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -46,3 +46,7 @@ body {
 .footer-desktop {
   margin-bottom: 10px;
 }
+
+@media (max-width: 767.98px) {
+  #footer { font-size: 90%; }
+}
