--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -20,7 +20,7 @@ body, html {
   background-color: #fff;
   color: #555;
   // font-family: 'Lato', 'Ariel', sans-serif;
-  font-size: 16px;
+  // font-size: 16px;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
 }
@@ -92,8 +92,8 @@ ul.contract-revision-list {
 
 // CSS for website > index.html.erb
 #hero {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), image-url('hero-background.jpg');
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), image-url('hero-background.jpg');
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), image-url('hero-background.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), image-url('hero-background.jpg');
   height: 100vh;
   color: #fff;
   background-size: cover;
@@ -129,26 +129,7 @@ ul.contract-revision-list {
 .request {
   color: #fff;
   border-color: #fff;
-//   float: left;
-//   // -webkit-transform: translate(54.5%, -35%);
-//   //         transform: translate(54.5%, -35%);
-//   padding-left: 24px;
-//   padding-right: 24px;
 }
-
-// .btn-search {
-//   float: left;
-//   border: 1px solid #007bff;
-//   margin-right: 25px;
-//   // -webkit-transform: translate(127%, -35%);
-//   //         transform: translate(127%, -35%);
-// }
-
-// .form-index {
-//   width: 110%;
-  // -webkit-transform: translate(33%, 5%);
-          // transform: translate(33%, 5%);
-// }
 
 .features-col p, ol, li {
   font-size: 90%;
@@ -268,6 +249,7 @@ ul.contract-revision-list {
     margin-left: auto;
     margin-right: auto;
   }
+  #hero { height: 950px; }
 }
 
 // Medium devices (tablets, less than 992px)
@@ -278,7 +260,6 @@ ul.contract-revision-list {
   h4 { font-size: 1.45em; }
 
   .hero-box {
-    width: 100%;
     font-size: 90%;
   }
   .request { margin-top: 10px; }
